# ContentGuard

./: .gitignore  CMakeLists.txt  Exact_Match.h  Exact_match.cpp  FingerPrint.cpp  Fingerprint_module.h  Makefile  README.md  StructuralSimilarity.cpp  Structural_Similarity.h  batchRanking.cpp  batchRanking.java  build.bat  build.ps1  contentguard  db_manager.hpp  documents.html  exactTesting.cpp  httplib.h  index.html  json.hpp  main.cpp  preprocessor.cpp  preprocessor.hpp  preprocessor_db.cpp  preprocessor_db.hpp  rankedResult.cpp  rankedResult.java  rawmatch.cpp  rawmatch.java  resultsDAO.hpp  resultsDAO.java  schema.sql  server.cpp  submission_manager.cpp  submission_manager.hpp  upload.html  userMain.cpp
Fingerprinting/: FingerPrint.cpp  Fingerprint_module.h
database/: db_config.example.hpp  resultsDAO.hpp  setup.sql
db/: db_config.hpp  setup.sql
exact_match/: Exact_Match.h  Exact_match.cpp
frontend/: documents.html  index.html  upload.html
pipeline/: detection_core.cpp  detection_core.hpp  pipeline.cpp  pipeline.hpp  token_bridge.cpp  token_bridge.hpp
preprocessor/: preprocessor.hpp  preprocessor_db.cpp  preprocessor_db.hpp
ranking/: RankedResult.hpp  RawMatch.hpp  batchRanking.hpp  ranking_module.cpp  ranking_module.hpp  rawmatch.cpp
reporting/: report_store.cpp  report_store.hpp  reporting.cpp  reporting.hpp
scoring/: scoring.cpp  scoring.hpp
structuralSimilarity/: StructuralSimilarity.cpp  Structural_Similarity.h
